# mars-rover-python-with-ai

./: .gitignore  README.md  pyproject.toml
src/mars_rover_with_ai/: map.py  mars_rover.py  position.py
tests/: test_map.py  test_mars_rover.py  test_position.py
