[project]
name = "mars-rover-with-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Albert Llousas Ortiz",email = "abert.ortizl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "mars_rover_with_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
